tests/php/functions/replaceTree.phpt.out

Fatal error: Call to undefined function replaceTree() in /home/kevin/workspace/plutonia-kvzlib/php/functions/replaceTree.phpt.php on line 10
